[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ScreenBackgroundTextTemp.jpg" type="Texture" id=1]
[ext_resource path="res://assets/ButtonPressedTemp.jpg" type="Texture" id=2]
[ext_resource path="res://assets/ButtonUnpressedTemp.jpg" type="Texture" id=3]
[ext_resource path="res://src/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://src/MusicUploadScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/OptionsMenuScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Playername.gd" type="Script" id=7]
[ext_resource path="res://assets/preloaded_songs/lofi.mp3" type="AudioStream" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MusicUploadScreen" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = -0.488
anchor_top = -0.448
anchor_right = 1.496
anchor_bottom = 1.404
margin_left = 498.712
margin_top = 269.8
margin_right = -508.904
margin_bottom = -241.4
rect_min_size = Vector2( 1024, 600 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 146.0
margin_top = 98.0
margin_right = -362.0
margin_bottom = -178.0
rect_min_size = Vector2( 512, 300 )
rect_pivot_offset = Vector2( -203, -89 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = 45.0
margin_right = -45.0
margin_bottom = -45.0
rect_pivot_offset = Vector2( -405, -147 )
alignment = 1

[node name="TitleLbl" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 426.0
margin_bottom = 42.0
rect_min_size = Vector2( 79, 42 )
text = "Music Visualizer Game
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 46.0
margin_right = 426.0
margin_bottom = 86.0
alignment = 1

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_top = 13.0
margin_right = 237.0
margin_bottom = 27.0
text = "Seizure Safety Mode"
align = 1

[node name="SafetyModeToggle" type="CheckButton" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 317.0
margin_bottom = 40.0

[node name="PlayBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 90.0
margin_right = 426.0
margin_bottom = 115.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="PlayLbl" type="Label" parent="NinePatchRect/VBoxContainer/PlayBtn"]
anchor_right = 1.0
anchor_bottom = 0.84
margin_bottom = 4.0
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DestressBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 119.0
margin_right = 426.0
margin_bottom = 144.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="DestressLbl" type="Label" parent="NinePatchRect/VBoxContainer/DestressBtn"]
anchor_right = 1.0
anchor_bottom = 0.84
margin_bottom = 4.0
text = "Destress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MusicPlayerBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 148.0
margin_right = 426.0
margin_bottom = 173.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="MusicPlayerLbl" type="Label" parent="NinePatchRect/VBoxContainer/MusicPlayerBtn"]
anchor_right = 1.0
anchor_bottom = 0.84
margin_bottom = 4.0
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MusicUploadBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 177.0
margin_right = 426.0
margin_bottom = 202.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="MusicUploadLbl" type="Label" parent="NinePatchRect/VBoxContainer/MusicUploadBtn"]
anchor_left = 0.00704225
anchor_top = 0.04
anchor_right = 0.994542
anchor_bottom = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 80, 25 )
text = "Upload"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OptsBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 206.0
margin_right = 426.0
margin_bottom = 231.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="OptsLbl" type="Label" parent="NinePatchRect/VBoxContainer/OptsBtn"]
anchor_left = 0.00234742
anchor_top = 0.04
anchor_right = 1.00235
anchor_bottom = 0.88
margin_bottom = 4.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuitBtn" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 235.0
margin_right = 426.0
margin_bottom = 260.0
rect_min_size = Vector2( 80, 25 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="QuitLbl" type="Label" parent="NinePatchRect/VBoxContainer/QuitBtn"]
anchor_right = 1.0
anchor_bottom = 0.84
margin_bottom = 4.0
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 264.0
margin_right = 426.0
margin_bottom = 278.0
text = "Enter Name:"
align = 1

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 282.0
margin_right = 426.0
margin_bottom = 306.0

[node name="Playername" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 310.0
margin_right = 426.0
margin_bottom = 324.0
script = ExtResource( 7 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="NinePatchRect"]
scale = Vector2( 1e-05, 1e-05 )

[node name="OptionsMenuScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="TitleBackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="toggled" from="NinePatchRect/VBoxContainer/HBoxContainer/SafetyModeToggle" to="." method="_on_SafetyModeToggle_toggled"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/DestressBtn" to="." method="_on_DestressBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MusicPlayerBtn" to="." method="_on_MusicPlayerBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MusicUploadBtn" to="." method="_on_MusicUploadBtn_pressed"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/MusicUploadBtn" to="." method="_on_MusicUploadBtn_toggled"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/OptsBtn" to="." method="_on_OptsBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="text_entered" from="NinePatchRect/VBoxContainer/LineEdit" to="." method="_onLineEdittextentered"]
